--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
